Bug fix -- hero was covering nav links on mobiles

--- a/pfv/static/assets/css/hero.css
+++ b/pfv/static/assets/css/hero.css
@@ -82,6 +82,7 @@
 @media only screen and (max-width: 700px) {
   #hero {
     margin: -60px auto 30px auto;
+    z-index: -1;
   }
 
   #hero #hero-info .hero-description {
